# dedup-database-analysis

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  credentials.env.example
docs/: 20260108 doku_updated.bib  20260108 doku_updated.tex  20260127 doku_de_updated.tex  20260127 doku_updated.tex  20260128 Deduplication_Interim_Presentation_safe.pptx  20260216 doku.bib  20260218 doku.bib  20260218 doku.tex  20260223 Deduplication_Final_Presentation.pptx  20260224 Deduplication_Final_Presentation.pptx  20260224 doku.bib  20260224 doku.tex  Deduplication_Interim_Presentation_Updated_v2.pptx  Fragen beantworten.txt  doku.bib  doku.tex  doku_de.tex  zihpub.cls
docs/grafana/: dedup-experiment-dashboard.json
infrastructure/security/: db-hardening-checklist.md  setup-lab-user.sh
infrastructure/sessions/: 2026-02-22-session-97-experiment-oom-fix-perdb-scaling.md  2026-02-22-session-97b-experiment-postgresql-run.md  2026-02-22-session-97c-bugfix-pipeline-rerun.md  2026-02-22-session-97d-experiment-monitoring-testdaten.md  2026-02-22-session-97e-native-adapters-implementation.md  2026-02-23-session-S99f-unicode-fix-gitops-reset-scripts.md  2026-02-23-session-S99g-kafka-sasl-fix-pipeline-restart.md  2026-02-23-session-S99h-port-fix-reset-scripts-pipeline-restart.md  2026-02-23-session-S99i-auto-cancel-reset-stage-secret-redaction.md  2026-02-23-session-S99j-configmap-sync-tag-bug-pipeline-6936.md  20260218-session-10-infra-k8s-manifeste-security-audit.md  20260220-session-74b-experiment-db-rebuild-ci-scheduling.md  20260220-session-74c-experiment-spezifikation-node-isolation.md  20260220-session-74d-experiment-nfs-ganesha-node-isolation.md  20260220-session-74e-experiment-data-copy-runner-isolation.md  20260220-session-80-experiment-isolation-runner-tags.md  20260221-session-85-experiment-pipeline-fixes-metallb.md  20260221-session-86-metallb-fix-experiment-crdb-reconnect-issue.md  20260222-session-95c-experiment-pipeline-fix-json-apt.md
k8s/: dedup-nfs-data.yaml  deploy-all.sh
k8s/base/: configmap.yaml  namespace.yaml  rbac.yaml  secrets.yaml
k8s/clickhouse/: statefulset.yaml
k8s/jobs/: cleanup-job.yaml  experiment-job.yaml
k8s/mariadb/: statefulset.yaml
k8s/monitoring/: grafana-dashboard-configmap.yaml  install.sh  values.yaml
logs/: 20260223 manuel.txt
scripts/: generate_datasets.py  measure_longhorn.sh
scripts/reset/: general_reset.sh  reset_clickhouse.sh  reset_cockroachdb.sh  reset_kafka.sh  reset_mariadb.sh  reset_minio.sh  reset_postgresql.sh  reset_redis.sh
sessions/: 20260216-kartografie-doku-tex.md  20260216-session-dedup-projekt-setup.md  20260217-session-9-triple-pipeline-monitoring.md  20260218-session-12-security-audit-experiment-redesign.md  20260219-session-13-monitoring-deploy-config-fixes.md  20260220-session-14-longhorn-upgrade-db-connectivity.md
src/cleanup/: postgresql_maintenance.py
src/cpp/: CMakeLists.txt  config.example.json  config.hpp  main.cpp
src/cpp/connectors/: clickhouse_connector.cpp  clickhouse_connector.hpp  comdare_connector.cpp  comdare_connector.hpp  db_connector.hpp  kafka_connector.cpp  kafka_connector.hpp  mariadb_connector.cpp  mariadb_connector.hpp  minio_connector.cpp  minio_connector.hpp  postgres_connector.cpp  postgres_connector.hpp  redis_connector.cpp  redis_connector.hpp
src/cpp/experiment/: checkpoint.hpp  data_loader.cpp  data_loader.hpp  dataset_generator.cpp  dataset_generator.hpp  db_internal_metrics.cpp  db_internal_metrics.hpp  metrics_collector.cpp  metrics_collector.hpp  metrics_trace.cpp  metrics_trace.hpp  native_data_parser.cpp  native_data_parser.hpp  native_record.hpp  results_exporter.cpp  results_exporter.hpp  schema_manager.cpp  schema_manager.hpp
src/cpp/utils/: logger.hpp  sha256.hpp  timer.hpp
src/loaders/: postgresql_loader.py
src/reporters/: aggregate_results.py  final_report.py  generate_charts.py
